clusters/building-blocks/media/apps/sonarr/app/sonarr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
