clusters/building-blocks/media/apps/sonarr/app/sonarr-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`sonarr.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: sonarr
          namespace: media
          passHostHeader: true
          port: 80
          scheme: http
